# Drawer-Qt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  canvasqwidget.cpp  canvasqwidget.h  customqwidget.cpp  customqwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.h  subdivisiondialog.cpp  subdivisiondialog.h  subdivisiondialog.ui
MEF/: MEF.cpp  MEF.h
Singular/: singular.cpp  singular.h
geom/: box.h  circlearc.cpp  circlearc.h  cubicbezier.cpp  cubicbezier.h  curve.cpp  curve.h  geomutils.cpp  geomutils.h  line.cpp  line.h  point.h  region.cpp  region.h  triangle.h
manager/: curvecollector.cpp  curvecollector.h  grid.cpp  grid.h  model.cpp  model.h
math/: matrix.cpp  matrix.h  smatrix.cpp  smatrix.h
mesh/: delaunaymodel.cpp  delaunaymodel.h
mesh_generator/: meshGen.cpp  meshGen.h  meshMainTools.h
topo/: edge.cpp  edge.h  eulerop.cpp  eulerop.h  euleroperators.cpp  euleroperators.h  face.cpp  face.h  halfedge.cpp  halfedge.h  hed.cpp  hed.h  hedsimplified.cpp  hedsimplified.h  loop.cpp  loop.h  vertex.cpp  vertex.h
utils/: box.h  geomutils.h  grid.cpp  grid.h
